[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/sc/src/img/cats.png" type="Texture" id=1]
[ext_resource path="res://src/sc/src/img/BEN.png" type="Texture" id=2]
[ext_resource path="res://src/sc/src/scripts/Ben.gd" type="Script" id=3]
[ext_resource path="res://src/sc/src/img/BENPRESSED.png" type="Texture" id=4]
[ext_resource path="res://src/sc/src/img/BENHOVERED.png" type="Texture" id=5]
[ext_resource path="res://src/temp/Oswald-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/sc/src/img/TEDDYHOVER.png" type="Texture" id=7]
[ext_resource path="res://src/sc/src/img/TEDDYPRESSED.png" type="Texture" id=8]
[ext_resource path="res://src/sc/src/img/MAX.png" type="Texture" id=9]
[ext_resource path="res://src/sc/src/img/SNOWPRESSED.png" type="Texture" id=10]
[ext_resource path="res://src/sc/src/img/SNOWHOVER.png" type="Texture" id=11]
[ext_resource path="res://src/sc/src/img/TEDDY.png" type="Texture" id=12]
[ext_resource path="res://src/sc/src/img/MAXPRESSED.png" type="Texture" id=13]
[ext_resource path="res://src/sc/src/img/MAXHOVER.png" type="Texture" id=14]
[ext_resource path="res://src/sc/src/img/SNOW.png" type="Texture" id=15]
[ext_resource path="res://src/sc/src/scripts/Max.gd" type="Script" id=16]
[ext_resource path="res://src/sc/src/scripts/Snow.gd" type="Script" id=17]
[ext_resource path="res://src/sc/src/scripts/Teddy.gd" type="Script" id=18]
[ext_resource path="res://src/sc/main.gd" type="Script" id=19]
[ext_resource path="res://src/sc/src/img/Lock.png" type="Texture" id=20]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0463576, 0.953642, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 600

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1080, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1080, 1080, 1080, 1080 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "4",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 100
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
anti_aliasing_size = 5

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
anti_aliasing_size = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=13]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]

[sub_resource type="GradientTexture" id=16]
width = 1024

[sub_resource type="Animation" id=17]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("overlay:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("overlay:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="sc" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="img"]
position = Vector2( -7.23438, 297.003 )
rotation = 1.5708
scale = Vector2( 1.0162, 1089.1 )
texture = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="img"]
position = Vector2( 793.008, 361.233 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
animation = "1"

[node name="Name" type="Label" parent="img"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 567.003
margin_top = -3.43398
margin_right = 1014.0
margin_bottom = 145.566
custom_fonts/font = SubResource( 8 )
text = "Ben"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="img"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -14.5152
margin_top = 34.434
margin_right = 986.485
margin_bottom = 183.434
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 8 )
text = "Choose Your Cat!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usr" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ben" type="Control" parent="usr"]
margin_left = 88.0
margin_top = 119.0
margin_right = 220.0
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ben" type="Sprite" parent="usr/Ben"]
position = Vector2( 66.6559, 60.0031 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
normal = ExtResource( 2 )
hovered = ExtResource( 5 )
pressed = ExtResource( 4 )

[node name="Snow" type="Control" parent="usr"]
margin_left = 251.879
margin_top = 119.0
margin_right = 383.879
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Snow" type="Sprite" parent="usr/Snow"]
material = SubResource( 9 )
position = Vector2( 66.6559, 60.0031 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )
script = ExtResource( 17 )
normal = ExtResource( 15 )
hovered = ExtResource( 11 )
pressed = ExtResource( 10 )

[node name="Lock" type="Sprite" parent="usr/Snow"]
self_modulate = Color( 1, 1, 1, 0.913725 )
position = Vector2( 63.7397, 64.2719 )
scale = Vector2( 0.451085, 0.458507 )
texture = ExtResource( 20 )

[node name="Teddy" type="Control" parent="usr"]
margin_left = 88.0
margin_top = 257.593
margin_right = 220.0
margin_bottom = 377.593
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teddy" type="Sprite" parent="usr/Teddy"]
position = Vector2( 66.6559, 60.0031 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
script = ExtResource( 18 )
normal = ExtResource( 12 )
hovered = ExtResource( 7 )
pressed = ExtResource( 8 )

[node name="Lock" type="Sprite" parent="usr/Teddy"]
self_modulate = Color( 1, 1, 1, 0.913725 )
position = Vector2( 63.7397, 64.2719 )
scale = Vector2( 0.451085, 0.458507 )
texture = ExtResource( 20 )

[node name="Max" type="Control" parent="usr"]
margin_left = 251.879
margin_top = 257.593
margin_right = 383.879
margin_bottom = 377.593
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="Sprite" parent="usr/Max"]
position = Vector2( 66.6559, 60.0031 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
script = ExtResource( 16 )
normal = ExtResource( 9 )
hovered = ExtResource( 14 )
pressed = ExtResource( 13 )

[node name="Lock" type="Sprite" parent="usr/Max"]
self_modulate = Color( 1, 1, 1, 0.913725 )
position = Vector2( 63.7397, 64.2719 )
scale = Vector2( 0.451085, 0.458507 )
texture = ExtResource( 20 )

[node name="Continue" type="Button" parent="usr"]
margin_left = 119.0
margin_top = 459.98
margin_right = 363.0
margin_bottom = 531.98
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 13 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="testlabel" type="Label" parent="usr"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 14 )
text = "Test?:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="usr/testlabel"]
margin_left = 39.685
margin_top = 3.9685
margin_right = 115.685
margin_bottom = 43.9685
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="usr/testlabel"]
margin_left = 44.0
margin_top = 6.0
margin_right = 75.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 15 )
text = "     O"

[node name="overlay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overlay" type="Sprite" parent="overlay"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 600 )
scale = Vector2( 1, 600 )
texture = SubResource( 16 )

[node name="fade" type="AnimationPlayer" parent="overlay"]
anims/fadein = SubResource( 17 )
anims/fadeout = SubResource( 18 )

[connection signal="gui_input" from="usr/Ben" to="usr/Ben/Ben" method="_on_Ben_gui_input"]
[connection signal="mouse_entered" from="usr/Ben" to="usr/Ben/Ben" method="_on_Ben_mouse_entered"]
[connection signal="mouse_exited" from="usr/Ben" to="usr/Ben/Ben" method="_on_Ben_mouse_exited"]
[connection signal="Ben" from="usr/Ben/Ben" to="." method="_on_Ben_Ben"]
[connection signal="Ben_Hovered" from="usr/Ben/Ben" to="." method="_on_Ben_Ben_Hovered"]
[connection signal="Ben_Not_Hovered" from="usr/Ben/Ben" to="." method="_on_Ben_Ben_Not_Hovered"]
[connection signal="gui_input" from="usr/Snow" to="usr/Snow/Snow" method="_on_Ben_gui_input"]
[connection signal="mouse_entered" from="usr/Snow" to="usr/Snow/Snow" method="_on_Ben_mouse_entered"]
[connection signal="mouse_exited" from="usr/Snow" to="usr/Snow/Snow" method="_on_Ben_mouse_exited"]
[connection signal="Snow" from="usr/Snow/Snow" to="." method="_on_Snow_Snow"]
[connection signal="Snow_Hovered" from="usr/Snow/Snow" to="." method="_on_Snow_Snow_Hovered"]
[connection signal="Snow_Not_Hovered" from="usr/Snow/Snow" to="." method="_on_Snow_Snow_Not_Hovered"]
[connection signal="gui_input" from="usr/Teddy" to="usr/Teddy/Teddy" method="_on_Teddy_gui_input"]
[connection signal="mouse_entered" from="usr/Teddy" to="usr/Teddy/Teddy" method="_on_Teddy_mouse_entered"]
[connection signal="mouse_exited" from="usr/Teddy" to="usr/Teddy/Teddy" method="_on_Teddy_mouse_exited"]
[connection signal="Teddy" from="usr/Teddy/Teddy" to="." method="_on_Teddy_Teddy"]
[connection signal="Teddy_Hovered" from="usr/Teddy/Teddy" to="." method="_on_Teddy_Teddy_Hovered"]
[connection signal="Teddy_Not_Hovered" from="usr/Teddy/Teddy" to="." method="_on_Teddy_Teddy_Not_Hovered"]
[connection signal="gui_input" from="usr/Max" to="usr/Max/Max" method="_on_Max_gui_input"]
[connection signal="mouse_entered" from="usr/Max" to="usr/Max/Max" method="_on_Max_mouse_entered"]
[connection signal="mouse_exited" from="usr/Max" to="usr/Max/Max" method="_on_Max_mouse_exited"]
[connection signal="Max" from="usr/Max/Max" to="." method="_on_Max_Max"]
[connection signal="Max_Hovered" from="usr/Max/Max" to="." method="_on_Max_Max_Hovered"]
[connection signal="Max_Not_Hovered" from="usr/Max/Max" to="." method="_on_Max_Max_Not_Hovered"]
[connection signal="pressed" from="usr/Continue" to="." method="_on_Continue_pressed"]
[connection signal="toggled" from="usr/testlabel/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="animation_finished" from="overlay/fade" to="." method="_on_fade_animation_finished"]
